Fixed submit button neg. z-index

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,27 +22,7 @@
 }
 
 .app-button-submit {
-  position: relative;
-  height: 100%;
   width: 100%;
-  z-index: -100;
-}
-
-.app-modal {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  background-color: white;
-  color: black;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 5px;
-  min-height: 20%;
-  width: 75%;
 }
 
 .app-results-container {
